<resources>
	<string name="app_name">CallBack Pal</string>

	<!-- Strings related to login -->
	<string name="prompt_phone">Telephone number</string>
	<string name="prompt_password">Code</string>
	<string name="action_calling_number">Dialing %s </string>
	<string name="action_sign_in_short">Sign in</string>
	<string name="action_validate_phone">Validate phone</string>
	<string name="action_dial_phone">Dial</string>

	<string name="error_invalid_password">This validation code is not correct</string>
	<string name="error_invalid_phone">This phone number is too short</string>
	<string name="error_incorrect_password">This password is incorrect</string>
	<string name="error_field_required">This field is required</string>
	<string name="permission_rationale">"Contacts permissions are needed for providing contact
		list."
	</string>
	<string name="callback_caption">The system will call to you shortly. Enter the code above.</string>
	<string name="retry_validation">Did not receive a call? <u>Retry</u>.</string>
	<string name="image_avatar_description">Contact avatar</string>
	<string name="image_logo_description">App logo</string>
	<string name="action_search">Search</string>

	<string name="error_message">Something went wrong: %s</string>

	<string name="timer">Seconds remaining: %d</string>

	<string name="info_next_call">Next call will be available in one second.</string>
	<plurals name="info_next_call_plural">
		<item quantity="one">Next call will be available in one second.</item>
		<item quantity="other">Next call will be available in %d seconds.</item>
	</plurals>

	<string name="info_dial">Dial in progress…</string>

	<string name="unknown_error">An error occurred</string>

	<string name="unknown_contact">Unknown contact</string>

	<string name="info_net_status_wifi_enabled">Wi-Fi enabled.</string>
	<string name="info_net_status_mobile_enabled">Mobile data enabled.</string>
	<string name="info_net_status_disconnected">Not connected to Internet.</string>

	<string name="drawer_open">Open navigation drawer</string>
	<string name="drawer_close">Close navigation drawer</string>

	<string name="drawer_menu_contacts_list">Contacts</string>
	<string name="drawer_menu_call_history">Call history</string>
	<string name="drawer_menu_dialer">Dialer</string>
	<string name="drawer_menu_sign_out">Sign out</string>
	<string name="date">Date</string>
	<string name="number">Number</string>
	<string name="no">No:</string>
	<string name="unknown">Unknown</string>
	<string name="call_type">Outgoing</string>
</resources>
