<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	android:gravity="center_horizontal"
	android:orientation="vertical"
	android:paddingBottom="@dimen/activity_vertical_margin"
	android:paddingLeft="@dimen/activity_horizontal_margin"
	android:paddingRight="@dimen/activity_horizontal_margin"
	android:paddingTop="@dimen/activity_vertical_margin"
	tools:context="ru.mail.tp.callbackpal.LoginActivity">

	<!-- Login progress -->
	<ProgressBar
		android:id="@+id/login_progress"
		style="?android:attr/progressBarStyleLarge"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginBottom="8dp"
		android:visibility="gone" />

	<ScrollView
		android:id="@+id/login_form"
		android:layout_width="match_parent"
		android:layout_height="match_parent">

		<LinearLayout
			android:id="@+id/email_login_form"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:orientation="vertical">

		<android.support.design.widget.TextInputLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content">

			<com.github.pinball83.maskededittext.MaskedEditText
				android:id="@+id/number_masked"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:textSize="18sp"
				android:inputType="number"
				android:hint="@string/prompt_phone"
				app:mask="+7 (***) *** **-**"
				app:notMaskedSymbol="*"
				android:layout_marginTop="50sp" />
		</android.support.design.widget.TextInputLayout>

			<android.support.design.widget.TextInputLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content">

				<EditText
					android:id="@+id/password"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:hint="@string/prompt_password"
					android:imeActionId="@+id/login"
					android:imeActionLabel="@string/action_sign_in_short"
					android:imeOptions="actionUnspecified"
					android:inputType="textPassword|number"
					android:maxLines="1"
					android:maxLength="4"
					android:visibility="gone" />
			</android.support.design.widget.TextInputLayout>

			<Button
				android:id="@+id/sign_in_button"
				android:layout_width="match_parent"
				android:layout_height="36dp"
				android:layout_marginTop="16dp"
				android:text="@string/action_validate_phone"
				android:textStyle="bold"
				android:background="@drawable/validate_button_background"
				android:textColor="@color/whitesas" />

			<TextView
				android:id="@+id/callback_caption"
				android:text="@string/callback_caption"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:visibility="gone" />

			<TextView
				android:id="@+id/retry_validation"
				android:text="@string/retry_validation"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:visibility="gone"
				android:textColor="@drawable/text_view_color"
				android:clickable="true" />

			<TextView
				android:id="@+id/timer_view"
				android:text="@string/timer"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:textColor="@color/red"
				android:visibility="gone"
				/>

		</LinearLayout>
	</ScrollView>
</LinearLayout>
