<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="wrap_content"
	android:orientation="vertical"
	android:padding="5dp"
	android:focusable="true"
	android:clickable="true">

	<LinearLayout
		android:layout_width="wrap_content"
		android:layout_height="match_parent"
		android:orientation="horizontal"
		android:paddingLeft="10dp"
		android:paddingStart="10dp"
		android:paddingEnd="10dp">

		<TextView
			android:id="@+id/tvNameMain"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginRight="5dp"
			android:layout_marginEnd="5dp"
			android:paddingTop="5dp"
			android:text="@string/unknown"
			android:textSize="15sp"
			android:textStyle="bold" />

		<TextView
			android:id="@+id/textView2"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/no" />

		<TextView
			android:id="@+id/tvNumberMain"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginRight="10dp"
			android:layout_marginEnd="10dp"
			android:text="@string/number" />

		<TextView
			android:id="@+id/tvTime"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content" />
	</LinearLayout>

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:orientation="horizontal"
		android:paddingLeft="10dp"
		android:paddingStart="10dp"
		android:paddingEnd="10dp">

		<TextView
			android:id="@+id/tvDate"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginRight="10dp"
			android:layout_marginEnd="10dp"
			android:text="@string/date" />

		<TextView
			android:id="@+id/tvType"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content" />
	</LinearLayout>
</LinearLayout>
